--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,29 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# SQLite
-*.db
-*.sqlite3
-
-# Environment
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
 
 # IDE
 .vscode/
@@ -21,15 +33,30 @@ __pycache__/
 *.swo
 *~
 
+# Environment variables
+.env
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Logs
+*.log
+
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-logs
-*.log
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
 
-# Dependencies
-venv/
-env/
-ENV/
+# MyPy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Project specific
+amygdala.db
