--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ uvicorn==0.24.0.post1
 numpy==1.26.2
 pydantic==2.5.0
 pydantic-settings==2.1.0
+sentence-transformers==2.2.2
 
 # Database Dependencies
-sqlite3-binary==0.5.0
+# sqlite3 is included in Python's standard library
 # For Vector DB (optional)
 # chromadb==0.4.15
 # For Graph DB (optional)
