--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,24 @@ DEFAULT_LLM_PROVIDER=mock
 API_HOST=0.0.0.0
 API_PORT=8000
 
-# 日志级别 (DEBUG, INFO, WARNING, ERROR)
+# ============================================
+# 日志配置
+# ============================================
+
+# 日志级别 (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
+
+# 日志格式
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+
+# 是否启用控制台日志输出
+LOG_ENABLE_CONSOLE=true
+
+# 是否启用文件日志输出
+LOG_ENABLE_FILE=true
+
+# 日志文件路径（相对于项目根目录的 logs 目录）
+LOG_FILE=limbic_flow.log
 
 # ============================================
 # 数据库配置
