--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "openai>=1.3.0",
     "anthropic>=0.7.0",
     "httpx>=0.25.0",
+    "sentence-transformers>=2.2.0",
 ]
 
 [project.optional-dependencies]
